# imac-minecraft

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  mainCraft
glimac/src/: cube.cpp  stb_image.h
sources/: CMakeLists.txt
sources/assets/textures/: template.psd
sources/glimac/: CMakeLists.txt
sources/glimac/include/glimac/: Cube.hpp  FreeflyCamera.hpp  Interface.hpp  Map.hpp  Menu.hpp  Physics.hpp  Player.hpp  Program.hpp  Skybox.hpp  Sound.hpp  Texture.hpp  TextureManager.hpp  Timer.hpp  TrackballCamera.hpp  Tree.hpp  common.hpp
sources/glimac/src/: Cube.cpp  FreeflyCamera.cpp  Interface.cpp  Map.cpp  Menu.cpp  Physics.cpp  Player.cpp  Program.cpp  Skybox.cpp  Sound.cpp  Texture.cpp  TextureManager.cpp  Timer.cpp  TrackballCamera.cpp  Tree.cpp  afficheMenu.cpp  cube.cpp  cube_obsolete.cpp
sources/pokecraft/: CMakeLists.txt  mainCraft.cpp
sources/pokecraft-lib/: CMakeLists.txt
sources/pokecraft-lib/include/pokecraft-lib/: Physics.hpp
sources/pokecraft-lib/src/: Physics.cpp
sources/pokecraft/shaders/: 3D.vs.glsl  billboard.vs  pointlight.fs.glsl
sources/shaders/: Cube.gs.glsl  allShaders.fs.glsl  allShaders.glsl  cube.fs.glsl  cube.gs.glsl  cube.vs.glsl  directionallight.fs.glsl  multiTex3D.fs.glsl  normals.fs.glsl  nothing.gs.glsl  pointlight.fs.glsl  sky.fs.glsl  sky.vs.glsl  tex3D.fs.glsl  tex3D.vs.glsl
sources/src/: Menu.cpp  Menu.hpp  Physics.cpp  Player.cpp  Player.hpp  Sound.cpp  Sound.hpp  Timer.cpp  afficheMenu.cpp  mainCraft.cpp
sources/src/moi/: Menu.cpp  Menu.hpp
